# todo_ai

./: .gitignore  README.md
core/: Dockerfile  docker-compose.yaml  pyproject.toml
core/docs/source/: conf.py  core.rst  index.rst
core/tools/: format.sh
docs/: pull_request_template.md
project_template/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
project_template/docs/source/: conf.py  index.rst  project_template.rst
project_template/envs/: .env-default
project_template/tools/: format.sh
